# fast_zero_sync

./: .coverage  README.md  memory:  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/versions/: dc4e2d1edbec_add_updated_at_column_to_users.py  fa771ca5ac75_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_security.py  test_user.py
