[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["mendesrl <ribeiro.larissamendes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
httpx = "^0.27.0"

[tool.ruff]
line-length = 79 # Maximum of characters inline
extend-exclude = ['migrations'] # Don't format migrations file

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
# I (Isort): Checagem de ordenação de imports em ordem alfabética
# F (Pyflakes): Procura por alguns erros em relação a boas práticas de código
# E (Erros pycodestyle): Erros de estilo de código
# W (Avisos pycodestyle): Avisos de coisas não recomendadas no estilo de código
# PL (Pylint): Como o F, também procura por erros em relação a boas práticas de código
# PT (flake8-pytest): Checagem de boas práticas do Pytes

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
